...
              child: Text(I.of(context).signUpMessage),
            ),
          ),
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 16),
            child: RoundedButton(
              key: const Key('to_sign_up_button'),
              color: splashColor,
              text: I.of(context).signUpButton,
              onTap: () {
                Navigator.of(context).push(MaterialPageRoute(
                  builder: (_) => SignUpPage(),
                ));
...
