...

    final _acceptTermsCheckbox = Container(
      decoration: BoxDecoration(
        border: Border.all(color: Colors.blueAccent),
      ),
      child: CheckboxListTile(
        key: const Key('agree'),
        value: _agree,
        activeColor: Colors.blue,
        title: Text.rich(
          // TODO: error
          TextSpan(
            text: '',
...
